--- a/style.css
+++ b/style.css
@@ -1,1 +1,24 @@
-html, body{background: #000;} * { margin: 0; overflow: hidden; } #canvas {width: 100%;height: 100%;}
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  overflow: hidden;
+}
+html:hover span, body:hover span {
+  display: none;
+}
+
+canvas {
+  cursor: crosshair;
+}
+
+span {
+  font-family: 'Georgia', cursive;
+  font-size: 40px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  color: #000;
+  margin-top: -40px;
+  margin-left: -200px;
+}
