--- a/style.css
+++ b/style.css
@@ -1,24 +1,46 @@
-html, body {
-  width: 100%;
-  height: 100%;
-  margin: 0px;
+body{
+  background: #000;
+  padding-top: 10px;
+} 
+
+p{
+  color: lime; 
+  font-family: "Courier";
+  font-size: 20px;
+  margin: 10px 0 0 10px;
+  white-space: nowrap;
   overflow: hidden;
-}
-html:hover span, body:hover span {
-  display: none;
-}
-
-canvas {
-  cursor: crosshair;
+  width: 30em;
+  animation: type 4s steps(60, end); 
 }
 
-span {
-  font-family: 'Georgia', cursive;
-  font-size: 40px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  color: #000;
-  margin-top: -40px;
-  margin-left: -200px;
+p:nth-child(2){
+  animation: type2 8s steps(60, end);
+}
+
+p a{
+  color: lime;
+  text-decoration: none;
+}
+
+span{
+  animation: blink 1s infinite;
+}
+
+@keyframes type{ 
+  from { width: 0; } 
+} 
+
+@keyframes type2{
+  0%{width: 0;}
+  50%{width: 0;}
+  100%{ width: 100; } 
+} 
+
+@keyframes blink{
+  to{opacity: .0;}
+}
+
+::selection{
+  background: black;
 }
